# foxhole

./: Cargo.toml  build.rs
src/: main.rs
src/cli/: ast_dump.rs  mod.rs  traits.rs
src/cli/ast/: dump.rs  load.rs  mod.rs
src/internals/: mod.rs
src/internals/canonization/: mod.rs
src/internals/canonization/graph/: edges.rs  func.rs  item.rs  mod.rs  nodes.rs  traits.rs
src/internals/canonization/graph/namespace/: mod.rs  traits.rs
src/internals/canonization/graph/namespace/bind/: args.rs  assign.rs  err  mod.rs
src/internals/canonization/graph/namespace/func/: composite.rs  function.rs  mod.rs
src/internals/canonization/kinds/: collection.rs  compositional.rs  function.rs  int.rs  mod.rs  workable.rs
src/internals/canonization/kinds/primative/: bool.rs  boolean.rs  int.rs  mod.rs
src/internals/canonization/namespace/: mod.rs
src/internals/canonization/pass1/: mod.rs
src/internals/canonization/to_ast/: determine_type.rs  identifier.rs  mod.rs  namespace.rs  template_stuff.rs  validation_errors.rs
src/internals/canonization/to_ast/partial_ast/: mod.rs
src/internals/canonization/to_ast/partial_ast/phase1/: assignment.rs  expr.rs  mod.rs  namespace.rs
src/internals/errors/: mod.rs  term_errors.rs
src/internals/parser/: id.rs  mod.rs  span.rs  traits.rs
src/internals/parser/ast/: args.rs  assign.rs  comparg.rs  condition.rs  expr.rs  func.rs  ident.rs  invoke.rs  kind.rs  mod.rs  op.rs  source.rs  statement.rs  template.rs
src/internals/validation/: kinds.rs  mod.rs
