[package]
name = "mathhammer"
version = "0.0.1"
authors = ["valarauca <codylaeder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = { git = "https://github.com/valarauca/grmtools", rev = "d75e870" }
lrlex = { git = "https://github.com/valarauca/grmtools", rev = "d75e870" }
lrpar = { git = "https://github.com/valarauca/grmtools", rev = "d75e870" }

[dependencies]
cfgrammar = { git = "https://github.com/valarauca/grmtools", rev = "d75e870" }
lrlex = { git = "https://github.com/valarauca/grmtools", rev = "d75e870" }
lrpar = { git = "https://github.com/valarauca/grmtools", rev = "d75e870" }
num-traits = "0.2.11"

