[package]
name = "mathhammer"
version = "0.0.1"
authors = ["valarauca <codylaeder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = "0.9.0"
lrlex = "0.9.0"
lrpar = "0.9.0"

[dependencies]
cfgrammar = "0.9.0" 
lrlex =     "0.9.0" 
lrpar =     "0.9.0" 
num-traits = "0.2.11"
try_from = "0.3.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.1"
petgraph = { version = "0.5.1", features = ["serde-1"] }
